chore: fixing layout issues & routing rerender

--- a/styles/global.css
+++ b/styles/global.css
@@ -212,8 +212,8 @@ ion-slides {
 }
 
 .swiper-slide img {
-  max-height: 20%;
-  /* margin: 60px 0 40px; */
+  max-height: 10em;
+  margin: 0px 50px 40px;
   pointer-events: none;
 }
 
